Fix quote widths on mobile

--- a/src/sass/_quotes.scss
+++ b/src/sass/_quotes.scss
@@ -25,8 +25,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 60%;
-        min-width: 500px;
+        width: calc( 100% - 4rem );
         max-width: 800px;
     }
     
@@ -55,4 +54,14 @@
         margin-right: .25rem;
     }
     
+}
+
+@media screen and (min-width: $break1) {
+	.cl-quote {
+		blockquote,
+		cite {
+			width: 60%;
+			min-width: 500px;
+		}
+	}
 }
